Modified css line to README file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ p {
     font-size: 16px;
 }
 
-/* /* removed margin-bottom and background-image for accessibility from HTML from class hero.
+/* /* removed background-image for accessibility from HTML from class hero.
 Sets a height to 800px, width: 100%, and a margin-bottom of 25px 
 */
 .hero {
